<resources>
    <string name="app_name">Todo</string>
    <string name="task_count_placeholder">%d tasks</string>
    <string name="category_label">CATEGORIES</string>
    <string name="task_label">TASKS</string>
    <string name="welcome_message">What\'s up!</string>
    <string name="fab_button_description">Add new task</string>
    <string name="drawer_button_description">Open menu</string>
    <string name="drawer_minimize_button_description">Close drawer</string>
    <string name="add_task">New task</string>
    <string name="new_task_hint">Enter new task</string>
    <string name="main_back_description">Back to task list</string>
    <string name="new_category_message">New category</string>
    <string name="edit_task">Edit task</string>
    <string name="category_name_hint">Category name</string>
    <string name="new_category_dialog_title">Create new category</string>
    <string name="create_button">Create</string>
    <string name="cancel_button">Cancel</string>
    <string name="completed_at_format">\'Completed at \'MMMM  dd, yyyy hh:mma</string>
    <string name="task_deleted_message">The task was deleted</string>
    <string name="undo_button">UNDO</string>
    <string name="delete_description">Delete icon</string>
    <string name="add_description_hint">Add description</string>
</resources>